--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,9 @@
 cmake_minimum_required(VERSION 3.16)
+project(turing-patterns VERSION 1.0 LANGUAGES CXX)
 
-project(MSTP-Generator VERSION 1.0 LANGUAGES CXX)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/$<CONFIGURATION>")
+set(CMAKE_CXX_STANDARD 20)
 
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set(CMAKE_INCLUDE_CURRENT_DIR ON)
-
-find_package(Qt6 COMPONENTS Core Quick REQUIRED)
-qt_standard_project_setup()
-set(CMAKE_AUTORCC ON)
-
+add_subdirectory(SDL EXCLUDE_FROM_ALL)
 add_subdirectory(src)
